pattern matching in switch enabled